--- a/src/app/stages/stage-list/stage-list.component.html
+++ b/src/app/stages/stage-list/stage-list.component.html
@@ -21,11 +21,7 @@
     </div>
   </ng-template>
 
-  <div class="row">
-    <div class="col-12">
-      <button type="button" class="btn btn-primary btn-add" (click)="toggleNewOpp(true)">  <img src="/assets/icon_button.png" alt="customer" />  Adicionar negócio</button>
-    </div>
-  </div>
+  <app-opportunity-button-add [(inOpen)]="inOpen"></app-opportunity-button-add>
 
   <div class="row">
     <div class="col-sm-2" *ngFor="let stage of data">       
@@ -43,17 +39,13 @@
         </div>
       </div>
       
-      <div class="card new-opp" *ngIf="newOpp && stage.id == 1">
+      <div class="card new-opp" *ngIf="inOpen && stage.id == 1">
         <div class="card-body">
-
-          <form [formGroup]="form" (ngSubmit)="save()" class="stage-edit" novalidate>
-          
-            <input id="title" formControlName="title" placeholder="Titulo do negócio">
-            
+          <form [formGroup]="form" (ngSubmit)="save()" class="stage-edit" novalidate>          
+            <input id="title" formControlName="title" placeholder="Titulo do negócio">            
             <div>
               <i class="fa fa-building"></i> <input id="customer" formControlName="customer" placeholder="Nome do cliente">              
-            </div>
-            
+            </div>            
             <input id="value" formControlName="value" placeholder="R$">             
             <input type="hidden" id="stage_id" formControlName="stage_id">
             <!-- <div formGroupName="stage">
