We can ry again

--- a/src/app/opportunities/opportunity-button-add/opportunity-button-add.component.html
+++ b/src/app/opportunities/opportunity-button-add/opportunity-button-add.component.html
@@ -2,5 +2,6 @@
   <div class="col-12">
     <button type="button" class="btn btn-primary btn-add" (click)="toggleNewOpp()"> <img src="/assets/icon_button.png"
         alt="customer" /> Adicionar negócio</button>
+    page: {{page }}
   </div>
-</div>
+</div>  
